[tool.poetry]
name = "etltools-"
version = "0.1.0"
description = "Cool Project"
authors = ["Your Name <you@example.com>"]
license = "Apache Free"

[tool.poetry.dependencies]
python = "3.9.6"
flask = "^1.0"

[tool.poetry.dev-dependencies]
flask = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
